added styles for A, completed A and C assignments

--- a/1/AssignmentA.html
+++ b/1/AssignmentA.html
@@ -2,26 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="author" name="Vitalii Korytnyi s31719">
+    <meta name="author" content="Vitalii Korytnyi s31719">
+    <link rel="stylesheet" href="/styles/AssignmentC.css">
     <title>Assignment 1</title>
 </head>
 <body>
     <header>
-        <h1>Assignment 1</h1>
+        <h1>Assignment A</h1>
         <h2>Created by Vitalii Korytnyi s31719</h2>
         <h2 style="text-align:center;">Wi-Fi</h2>
     </header>
-    <p style="text-align:center;">
-        <b>Wi-Fi is a family of wireless network protocols based on the IEEE 802.11 family of standards</b>,
-        which are <i>commonly used</i> for local area networking of devices and Internet access,
-        allowing nearby digital devices to exchange data by radio waves.
-        <strong>These are the most widely used computer networks,</strong>
-        used globally in home and small office networks to link devices and to provide
-        Internet access with wireless routers and wireless access points
-        in public places such as coffee shops, restaurants, hotels, libraries, and airports.
+    <p>
+        <b>Wi-Fi is a family of wireless network protocols based on the IEEE 802.11 family of standards</b>.
     </p>
-    <br>
-    <br>
+
+    <p>
+        It is <i>commonly used</i> for local area networking of devices and Internet access, allowing nearby digital devices to exchange data by radio waves.
+    </p>
+
+    <p>
+        <strong>These are the most widely used computer networks,</strong> used globally in home and small office networks to link devices.
+    </p>
+
+    <p>
+        Wi-Fi also provides Internet access with wireless routers and wireless access points in public places such as coffee shops, restaurants, hotels, libraries, and airports.
+    </p>
+
+    <p>
+        <em>Wi-Fi has become an essential technology for modern connectivity.</em>
+    </p>
+
+    <p>
+        Some scientific notes: H<sub>2</sub>O is water, and E = mc<sup>2</sup>.
+    </p>
+
+    <p>
+        Outdated Wi-Fi standards are gradually being replaced by newer ones.
+    </p>
+
+    <p>
+        I took info from <a href="https://en.wikipedia.org/wiki/Wi-Fi" target="_blank">Wikipedia</a>.
+    </p>
+
+
     <h2>Numbered List</h2>
         <ol>
             <li>
@@ -39,8 +62,6 @@
             <li>Second Element</li>
             <li>Third Element</li>
         </ol>
-    <br>
-    <br>
     <table>
         <tr>
             <th>Header 1</th>
@@ -73,8 +94,6 @@
             <td> 16 </td>
         </tr>
     </table>
-    <br>
-    <br>
     <table>
         <tr>
             <td> <img src="images/1.jpg" width="300" height="100"></td>
@@ -94,3 +113,10 @@
 <!--4. 4x5 table containing random data, with row of header cells-->
 <!--5. 2x2 table, with upper left cell containing an image, upper right - text,-->
 <!--bottom row should contain a single cell with 2 column width, also containing text-->
+
+<!--Assignment C – 2 pts-->
+<!--Create a CSS stylesheet for HTML page from Assignment A. It should meet the following requirements:-->
+<!--1. Define font style and size for paragraphs and headers-->
+<!--2. Define style and color of table borders-->
+<!--3. Remove underlines from links-->
+<!--4. Change the style of markers for unordered lists-->
