--- a/1/AssignmentA.html
+++ b/1/AssignmentA.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vitalii Korytnyi s31719">
     <link rel="stylesheet" href="/styles/AssignmentC.css">
-    <title>Assignment 1</title>
+    <title>Assignment A</title>
 </head>
 <body>
     <header>
