--- a/1/AssignmentB.html
+++ b/1/AssignmentB.html
@@ -2,51 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="author" name="Vitalii Korytnyi s31719">
+    <meta name="author" content="Vitalii Korytnyi s31719">
+    <link rel="stylesheet" href="/styles/AssignmentD.css">
     <title>AssignmentB</title>
 </head>
 <body>
+<!--    <form>-->
+<!--        <label>Name:</label>-->
+<!--        <input type="text">-->
+<!--        <br>-->
+<!--        <label>Surname:</label>-->
+<!--        <input type="text">-->
+<!--        <br>-->
+<!--        <label>Password:</label>-->
+<!--        <input type="password">-->
+<!--        <br>-->
+<!--        <label>Checkbox:</label>-->
+<!--        <input type="checkbox">-->
+<!--    </form>-->
+
+<!--    <form>-->
+<!--        <input type="radio" name="language" >-->
+<!--        <label>HTML</label>-->
+<!--        <br>-->
+<!--        <input type="radio" name="language">-->
+<!--        <label>CSS</label>-->
+<!--        <br>-->
+<!--        <input type="radio" name="language">-->
+<!--        <label>JavaScript</label>-->
+<!--    </form>-->
+
+<!--    <label>Choose a country:</label>-->
+<!--    <select name="country">-->
+<!--        <option value="poland">Poland</option>-->
+<!--        <option value="germany">Germany</option>-->
+<!--        <option value="france">France</option>-->
+<!--        <option value="usa">USA</option>-->
+<!--    </select>-->
+<!--    <br>-->
+
+<!--    <label>Information:</label>-->
+<!--    <br>-->
+<!--    <textarea name="comments" rows="5" cols="30" placeholder="Enter your information here"></textarea>-->
+<!--    <br>-->
+
+<!--    <input type="submit" value="Submit">-->
+<!--    <input type="reset" value="Reset">-->
     <form>
         <label>Name:</label>
         <input type="text">
         <br>
         <label>Surname:</label>
-        <input type="text">
-        <br>
-        <label>Password:</label>
-        <input type="password">
-        <br>
-        <label>Checkbox:</label>
-        <input type="checkbox">
+        <input>
     </form>
-
-    <form>
-        <input type="radio" name="language" >
-        <label>HTML</label>
-        <br>
-        <input type="radio" name="language">
-        <label>CSS</label>
-        <br>
-        <input type="radio" name="language">
-        <label>JavaScript</label>
-    </form>
-
-    <label>Choose a country:</label>
-    <select name="country">
-        <option value="poland">Poland</option>
-        <option value="germany">Germany</option>
-        <option value="france">France</option>
-        <option value="usa">USA</option>
-    </select>
-    <br>
-
-    <label>Information:</label>
-    <br>
-    <textarea name="comments" rows="5" cols="30" placeholder="Enter your information here"></textarea>
-    <br>
-
-    <input type="submit" value="Submit">
-    <input type="reset" value="Reset">
 </body>
 </html>
 
@@ -61,3 +69,9 @@
 <!--    e. dropdown list-->
 <!--    f. text area-->
 <!--    g. submit and reset buttons-->
+
+<!--Assignment D – 2 pts-->
+<!--Create a CSS stylesheet for HTML page from Assignment B. It should meet the following requirements:-->
+<!--1. Define style and size of font for form elements-->
+<!--2. Define colors for field labels (one of the text fields
+should have different color from other fields to indicate that it is mandatory)-->
