--- a/1/AssignmentB.html
+++ b/1/AssignmentB.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Vitalii Korytnyi s31719">
-    <link rel="stylesheet" href="/styles/AssignmentD.css">
+    <link rel="stylesheet" href="./styles/AssignmentD.css">
     <title>AssignmentB</title>
 </head>
 <body>
