--- a/1/AssignmentA.html
+++ b/1/AssignmentA.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Vitalii Korytnyi s31719">
-    <link rel="stylesheet" href="/styles/AssignmentC.css">
+    <link rel="stylesheet" href="./styles/AssignmentC.css">
     <title>Assignment A</title>
 </head>
 <body>
