--- a/5_B/public/responseForm.html
+++ b/5_B/public/responseForm.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vitalii Korytnyi s31719">
     <title>Response Form For Student</title>
-    <link rel="stylesheet" href="styleForResponse.css">
+    <link rel="stylesheet" href="styleResponse.css">
 </head>
 <body>
     <div class="data">
