--- a/5_A/public/staticResourses.html
+++ b/5_A/public/staticResourses.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Vitalii Korytnyi s31719">
     <title>Static Resourses</title>
+    <link rel="stylesheet" href="styleResourses.css">
 </head>
 <body>
     <h1>Static Resources, Vitalii Korytnyi s31719</h1>
